[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voidfetch"
version = "0.1.0"
description = "A Neofetch alternative in Python"
authors = [{ name="VxidDev" }]
requires-python = ">=3.10"
dependencies = [
    "psutil",
    "colorama",
    "GPUtil",
    "setuptools"
]

[project.scripts]
voidfetch = "VoidFetch.main:main"


